Community: set correct z-index for invite input

--- a/packages/thicket-webapp/src/App/Community/Community.css
+++ b/packages/thicket-webapp/src/App/Community/Community.css
@@ -72,6 +72,7 @@
 
 .community__invite-wrap{
   position: relative;
+  z-index: 0;
   grid-row: 4;
   grid-column: 1 / -1;
 }
